src/cses/raab_game_i/clang-tidy.txt
3 warnings and 1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/raab_game_i/raab_game_i.cpp.
/Users/michael/repos/competitive-programming/src/cses/raab_game_i/raab_game_i.cpp:3:10: error: 'algorithm' file not found [clang-diagnostic-error]
    3 | #include <algorithm>
      |          ^~~~~~~~~~~
/Users/michael/repos/competitive-programming/src/cses/raab_game_i/raab_game_i.cpp:57:17: warning: this loop is infinite; none of its condition variables (value) are updated in the loop body [bugprone-infinite-loop]
   57 |                 for (std::uint64_t value = 1; value <= n; ++value) {
      |                 ^
/Users/michael/repos/competitive-programming/src/cses/raab_game_i/raab_game_i.cpp:70:17: warning: this loop is infinite; none of its condition variables (block) are updated in the loop body [bugprone-infinite-loop]
   70 |                 for (std::uint64_t block = 0; block + 1 < b; ++block) {
      |                 ^
/Users/michael/repos/competitive-programming/src/cses/raab_game_i/raab_game_i.cpp:77:17: warning: this loop is infinite; none of its condition variables (current) are updated in the loop body [bugprone-infinite-loop]
   77 |                 while (current <= n) {
      |                 ^
Found compiler error(s).
